<resources>
    <!--region Main Page-->
    <string name="sr_factory_mode">Surrey factory mode</string>
    <string name="basic_information">Basic Information</string>
    <string name="device_name">Device name:</string>
    <string name="device_model">Device model:</string>
    <string name="version_number">Version No:</string>
    <string name="android_version">Android version:</string>
    <string name="ram">RAM:</string>
    <string name="rom">ROM:</string>
    <string name="gb">G</string>
    <string name="battery_size">Battery size:</string>
    <string name="mah">MA</string>
    <string name="screen_size">Screen size:</string>
    <string name="inches">IN</string>
    <string name="screen_resolution">Screen Resolution:</string>
    <string name="pixels">PX</string>
    <string name="pixels_x">x</string>
    <string name="take_photos">TAKE PHOTOS</string>
    <string name="call_112">CALL 112</string>
    <string name="call_number">tel:112</string>
    <string name="single_test">SINGLE TEST</string>
    <string name="test_report">TEST REPORT</string>
    <string name="exit">EXIT</string>
    <string name="screen_off">SCREEN OFF</string>
    <string name="toggle_language">中文</string>
    <!--endregion-->


    <!--region Main Page Test-->
    <string name="device_name_test">itel-P662L</string>
    <string name="device_type_test">itel P662L</string>
    <string name="version_number_test">P662L-SE668S-12.0-GL-V195-20221228</string>
    <string name="android_version_test">12</string>
    <string name="ram_test">2</string>
    <string name="rom_test">64</string>
    <string name="battery_size_test">6000</string>
    <string name="screen_size_test">6.56</string>
    <string name="screen_resolution_test">720X1612</string>
    <!--endregion-->

    <!--region Single Test-->
    <string name="battery_test">Battery Test</string>
    <string name="vibration_test">Vibration Test</string>
    <string name="mike_test">Mike Test</string>
    <string name="headset_test">Headset Test</string>
    <string name="lcd_test">LCD Test</string>
    <string name="speaker_test">Speaker Test</string>
    <string name="receiver_test">Receiver Test</string>
    <string name="camera_test">Camera Test</string>
    <string name="flash_test">Flash Test</string>
    <string name="key_test">Key Test</string>
    <!--endregion-->

    <!--region Battery Test-->
    <string name="charging_status">Charging status:</string>
    <string name="charging">Charging</string>
    <string name="uncharged">Not charged</string>
    <string name="current_electricity">Current electricity:</string>
    <string name="current_electricity_test">100%</string>
    <string name="electricity_unit">%</string>
    <string name="battery_voltage">Battery voltage:</string>
    <string name="battery_voltage_test">4421mV</string>
    <string name="voltage_unit">mV</string>
    <string name="battery_temperature">Battery temperature:</string>
    <string name="battery_temperature_test">25.0</string>
    <string name="centigrade">℃</string>
    <string name="battery_pass_toast">Only after testing the two charging states can it pass</string>
    <!--endregion-->

    <!--region Vibration Test-->
    <string name="vibration_test_tip">During the vibration test,please observe whether it is normal</string>
    <!--endregion-->

    <!--region Mike and Headset Test-->
    <string name="mike_test_tip_1">Click recording first, and recording will play automatically in 5 seconds...</string>
    <string name="mike_test_tip_2">Please speak</string>
    <string name="mike_test_tip_3">The recording is finished, and the recording is playing</string>
    <string name="mike_test_tip_4">Test completed, recording and playback completed</string>
    <string name="mike_test_tip_5">Test failed, please retest</string>
    <string name="mike_test_btn_1">RECORDING</string>
    <string name="mike_test_btn_2">Testing in progress</string>
    <string name="mike_test_btn_3">RETEST</string>
    <string name="headset_test_tip_1">Insert the headset first, and then click recording. The recording will play automatically in 5 seconds</string>

    <string name="headset_test_toast_1">Plug headset</string>
    <string name="headset_test_toast_2">Unplug headset</string>
    <string name="headset_test_toast_3">Please plug the headset first</string>
    <string name="headset_test_toast_4">Headset removed during recording, please retest</string>
    <!--endregion-->

    <!--region LCD Test-->
    <string name="lCD_test_tip">In the LCD test, please click the screen to observe the color change</string>
    <!--endregion-->

    <!--region Speaker Test-->
    <string name="speaker_test_tip">During the speaker test, please pay attention to whether the speaker has sound</string>
    <string name="speaker_test_toast_1">Please test after unplug headset</string>
    <!--endregion-->

    <!--region Receiver Test-->
    <string name="receiver_test_tip">In the receiver test, please pay attention to whether there is sound in the receiver</string>
    <string name="receiver_test_toast_1">Please test after unplug headset</string>
    <!--endregion-->

    <!--region Camera Test-->
    <string name="camera_proactive">PROACTIVE</string>
    <string name="camera_back_shooting">BACK SHOOTING</string>
    <string name="configure_failed_toast">Configure failed!</string>
    <string name="save">Saved</string>
    <string name="error">Error</string>
    <string name="size_error_toast">Unable to find suitable preview size</string>
    <!--endregion-->

    <!--region Flashlight Test-->
    <string name="flashlight_test_tip">During the flash test, please observe whether it is normal</string>
    <string name="flashlight_turn_on">Turn On</string>
    <string name="flashlight_turn_off">Turn Off</string>
    <string name="flashlight_alert_title">Error !!</string>
    <string name="flashlight_alert_message">Your device doesn\'t support flash light!</string>
    <string name="flashlight_alert_positive">OK</string>
    <!--endregion-->

    <!--region Button Test-->
    <string name="volume_up">VOLUME UP</string>
    <string name="volume_down">VOLUME DOWN</string>
    <string name="power_key">POWER KEY</string>
    <!--endregion-->

    <!--region Test Result-->
    <string name="pass">PASS</string>
    <string name="fail">FAIL</string>
    <string name="untested">Untested</string>
    <!--endregion-->

    <!--region Toast-->
    <string name="back_toast">Please click the Back button again to exit the application</string>
    <!--endregion-->

    <!--region Permission Toast-->
    <string name="permission_mike">Need recording permission</string>
    <string name="permission_call">Need calling permission</string>
    <string name="permission_camera">Need camera permission</string>
    <!--endregion-->

    <!--region Permission AlertDialog-->
    <string name="permission_alert_title">权限申请</string>
    <string name="permission_alert_message">由于Surrey factory mode不能获取权限，不能正常运行，请设置权限后使用。设置路径：系统设置->Surrey factory mode->权限</string>
    <string name="permission_alert_positive">确定</string>
    <string name="permission_alert_cancel">取消</string>
    <!--endregion-->
</resources>