<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".activities.test.BatteryTestActivity">

    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/dimen_appbar_height"
        android:gravity="center_vertical"
        android:paddingStart="@dimen/dimen_small_spacing"
        android:background="@color/black">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/battery_test"
            android:textSize="@dimen/dimen_appbar_text"
            android:textColor="@color/white"/>
    </com.google.android.material.appbar.AppBarLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:minHeight="@dimen/dimen_test_text_height"
        android:paddingStart="@dimen/dimen_small_spacing"
        android:orientation="horizontal">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/charging_status"
            android:theme="@style/testText"/>
        <TextView
            android:id="@+id/charging_status"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:hint="@string/uncharged"
            android:theme="@style/testText"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:minHeight="@dimen/dimen_test_text_height"
        android:paddingStart="@dimen/dimen_small_spacing"
        android:orientation="horizontal">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/current_electricity"
            android:theme="@style/testText"/>
        <TextView
            android:id="@+id/current_electricity"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:hint="@string/current_electricity_test"
            android:theme="@style/testText"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:minHeight="@dimen/dimen_test_text_height"
        android:paddingStart="@dimen/dimen_small_spacing"
        android:orientation="horizontal">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/battery_voltage"
            android:theme="@style/testText"/>
        <TextView
            android:id="@+id/battery_voltage"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:hint="@string/battery_voltage_test"
            android:theme="@style/testText"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:minHeight="@dimen/dimen_test_text_height"
        android:paddingStart="@dimen/dimen_small_spacing"
        android:orientation="horizontal">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/battery_temperature"
            android:theme="@style/testText"/>
        <TextView
            android:id="@+id/battery_temperature"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:hint="@string/battery_temperature_test"
            android:theme="@style/testText"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal"
        android:gravity="bottom"
        android:paddingLeft="@dimen/dimen_small_spacing"
        android:paddingRight="@dimen/dimen_small_spacing"
        android:paddingBottom="@dimen/dimen_middle_spacing">
        <Button
            android:id="@+id/pass"
            android:layout_width="@dimen/dimen_0"
            android:layout_height="wrap_content"
            android:minHeight="@dimen/dimen_main_btn"
            android:layout_weight="1"
            android:text="@string/pass"
            android:theme="@style/NormalButton"/>

        <View
            android:layout_width="@dimen/dimen_small_spacing"
            android:layout_height="@dimen/dimen_main_btn" />

        <Button
            android:id="@+id/fail"
            android:layout_width="@dimen/dimen_0"
            android:layout_height="wrap_content"
            android:minHeight="@dimen/dimen_main_btn"
            android:layout_weight="1"
            android:text="@string/fail"
            android:theme="@style/NormalButton"/>
    </LinearLayout>
</LinearLayout>