<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".activities.test.HeadsetTestActivity">

    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/dimen_appbar_height"
        android:gravity="center_vertical"
        android:paddingStart="@dimen/dimen_small_spacing"
        android:background="@color/black">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/headset_test"
            android:textSize="@dimen/dimen_appbar_text"
            android:textColor="@color/white"/>
    </com.google.android.material.appbar.AppBarLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingStart="@dimen/dimen_small_spacing"
        android:paddingEnd="@dimen/dimen_small_spacing"
        android:paddingTop="@dimen/dimen_small_spacing"
        android:orientation="vertical">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:minHeight="@dimen/dimen_test_text_height"
            android:text="@string/headset_test_tip_1"
            android:theme="@style/testText"/>

        <TextView
            android:id="@+id/headset_tips"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:minHeight="@dimen/dimen_test_text_height"
            android:theme="@style/testText"/>

        <Button
            android:id="@+id/test_btn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:minHeight="@dimen/dimen_main_btn"
            android:text="@string/mike_test_btn_1"
            android:theme="@style/NormalButton"/>

        <Button
            android:id="@+id/testing_btn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:minHeight="@dimen/dimen_main_btn"
            android:text="@string/mike_test_btn_2"
            android:visibility="gone"
            android:theme="@style/NormalButton"/>

        <Button
            android:id="@+id/retest_btn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:minHeight="@dimen/dimen_main_btn"
            android:text="@string/mike_test_btn_3"
            android:visibility="gone"
            android:theme="@style/NormalButton"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal"
        android:paddingLeft="@dimen/dimen_small_spacing"
        android:paddingRight="@dimen/dimen_small_spacing"
        android:gravity="bottom"
        android:paddingBottom="@dimen/dimen_middle_spacing">
        <Button
            android:id="@+id/pass"
            android:layout_width="@dimen/dimen_0"
            android:layout_height="wrap_content"
            android:minHeight="@dimen/dimen_main_btn"
            android:layout_weight="1"
            android:text="@string/pass"
            android:theme="@style/NormalButton"/>

        <View
            android:layout_width="@dimen/dimen_small_spacing"
            android:layout_height="@dimen/dimen_main_btn" />

        <Button
            android:id="@+id/fail"
            android:layout_width="@dimen/dimen_0"
            android:layout_height="wrap_content"
            android:minHeight="@dimen/dimen_main_btn"
            android:layout_weight="1"
            android:text="@string/fail"
            android:theme="@style/NormalButton"/>
    </LinearLayout>
</LinearLayout>