<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".activities.test.CameraTestOldActivity">

    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/dimen_appbar_height"
        android:gravity="center_vertical"
        android:paddingStart="@dimen/dimen_small_spacing"
        android:background="@color/black">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/camera_test"
            android:textSize="@dimen/dimen_appbar_text"
            android:textColor="@color/white" />
    </com.google.android.material.appbar.AppBarLayout>

    <FrameLayout
        android:id="@+id/root_layout"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dimen_0"
        android:layout_weight="1"
        android:layout_gravity="center"
        android:background="@color/grey">

        <Button
            android:id="@+id/toggle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/camera_proactive"
            android:theme="@style/NormalButton"
            android:layout_gravity="right"
            android:layout_marginTop="@dimen/dimen_middle_spacing"
            android:layout_marginEnd="@dimen/dimen_middle_spacing" />
    </FrameLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/dimen_state_height"
        android:orientation="horizontal"
        android:paddingLeft="@dimen/dimen_small_spacing"
        android:paddingRight="@dimen/dimen_small_spacing"
        android:gravity="bottom"
        android:paddingBottom="@dimen/dimen_middle_spacing">

        <Button
            android:id="@+id/pass"
            android:layout_width="@dimen/dimen_0"
            android:layout_height="wrap_content"
            android:minHeight="@dimen/dimen_main_btn"
            android:layout_weight="1"
            android:text="@string/pass"
            android:theme="@style/NormalButton" />

        <View
            android:layout_width="@dimen/dimen_small_spacing"
            android:layout_height="@dimen/dimen_main_btn" />

        <Button
            android:id="@+id/fail"
            android:layout_width="@dimen/dimen_0"
            android:layout_height="wrap_content"
            android:minHeight="@dimen/dimen_main_btn"
            android:layout_weight="1"
            android:text="@string/fail"
            android:theme="@style/NormalButton" />
    </LinearLayout>
</LinearLayout>